turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  
	var color = getCouleurSol()
  
  for ((c, i) <- colors.zipWithIndex){
    if (color == c){
      var index = i
    }
  }
  
  rule(index) match{
    case 'R' =>
    	right()
    case 'L' =>
    	left()
  }
  
  if (color == Color.white){
    setBrushColor(Color.black)
  }else{
    setBrushColor(Color.white)
  }
  brushDown()
  brushUp()
  forward()
}